# python_dev_env

./: .env  .gitignore  README.md  pyproject.toml
.devcontainer/: dev.dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/scripts/: get_coverage.sh
python/sample_package/: adder.py
python/tests/: test_adder.py
src/sample_pkg/: adder.py
tests/: test_adder.py
